--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,4 @@ jobs:
       # (4)
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Commit the artifacts.
-view rawmain.yaml hosted with ❤ by GitHub
+          commit_message: Commit the artifacts
